--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
         </header>
     </main>
     <article>
-        <h1>Artigo 001</h1>
+        <h1>Curso Grátis</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat reprehenderit velit maiores alias soluta, veritatis culpa mollitia a tempora fuga numquam perspiciatis quos libero, quidem, neque facilis sint dolor? Voluptatum.</p>
     </article>
     <article>
-        <h1>Artigo 002</h1>
+        <h1>HTLM5 E CSS3</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maxime quibusdam soluta facilis exercitationem! Officiis harum deleniti distinctio esse, tenetur quia deserunt corporis beatae illum quis aspernatur totam assumenda quisquam.</p>
+    </article>
+    <article>
+        <h3>Está sendo legal poder fazer este curso de git e github</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, vitae id? Nobis reiciendis eveniet repudiandae vero neque eos consectetur ducimus debitis ipsa vel ex recusandae dignissimos, voluptates animi dolor est.</p>
     </article>
 </body>
 </html>
